ingress/monitoring/monitoring_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  tls:
  - hosts:
    - "*.local.elijahjohnson.dev"
    secretName: wildcard-tls-secret
  rules:
  - host: "grafana.local.elijahjohnson.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-stack-grafana
            port:
              number: 80
